Updating the exisiting files and uploading new files - Completed up to the app Pixelgrade section

--- a/css/intro.css
+++ b/css/intro.css
@@ -73,3 +73,9 @@
     gap: 8px;
     margin-bottom: 20px;
 }
+
+.register-btn{
+    text-decoration: none;
+    list-style-type: none;
+    color: #F5F7FA;
+}
