--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,154 @@ body{
     font-family: "Inter", sans-serif;
     margin: 0;
 }
+
+#clients{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 190px;
+    margin-top: 45px;
+    margin-bottom: 50px;
+}
+
+#client-info{
+    width: 100%;
+    height: 76px;
+    gap: 8px;
+    margin-bottom: 22px;
+}
+
+#client-logos{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 98px;
+    width: 1152px;
+}
+
+.title{
+    text-align: center;
+    color: #4D4D4D;
+    font-weight: 700;
+    font-size: 28px;
+}
+
+#client-info > h2{
+    text-align: center;
+    font-size: 36px;
+    font-weight: 600;
+}
+
+.description{
+    text-align: center;
+    color: #717171;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+
+#community{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#community-info > h2{
+    width: 542px;
+    height: 88px;
+    font-size: 36px;
+    padding-bottom: 8px;
+}
+
+#community-info > p{
+    height: 24px;
+    width: 100%;
+    font-size: 16px;
+}
+
+.cardsec1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 267px;
+    height: 144px;
+    text-align: center;
+    margin-left:10px;
+    margin-bottom: 16px;
+}
+
+#community-cards{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1440px;
+    height: 280px;
+    margin-top: 40px;
+    padding: 0px, 144px, 0px, 144px;
+
+}
+.community-cards{
+    width: 299px;
+    height: 260px;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px 0px #ABBED133;
+}
+
+#app-section{
+    width: 1440px;
+    height: 433px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 48px;
+    
+}
+
+#app-section-left{
+
+}
+
+#app-section-left > img{
+    width: 442px;
+    height: 328.99px;
+    margin-top: 52px;
+    margin-bottom: 52px;
+    margin-right: 144px;
+    margin-left: 200px;
+}
+
+#app-section-right{
+    margin-left: 100px;
+    text-align: left;
+    width: 661px;
+    height: 268px;
+}
+
+#app-section-right > h2{
+    font-size: 36px;
+    width: 601px;
+    height: 88px;
+    margin-bottom:16px;
+    text-align: left;
+}
+
+#app-section-right > p{
+    width: 601px;
+    height: 80px;
+    text-align: left;
+    margin-bottom: 32px;
+}
+
+#learn-more-btn{
+    width: 151px;
+    height: 52px;
+    border: none;
+    border-radius: 4px;
+    gap: 10px;
+}
