--- a/css/styles.css
+++ b/css/styles.css
@@ -146,12 +146,8 @@ body{
     margin-bottom: 32px;
 }
 
-#learn-more-btn{
-    width: 151px;
-    height: 52px;
-    border: none;
-    border-radius: 4px;
-    gap: 10px;
+#learnmore-btn{
+    margin-top: 32px;
 }
 
 /*Local Business Section*/
